Add summary cases

--- a/timeline.html
+++ b/timeline.html
@@ -26,9 +26,10 @@ body, html {
 <body>
 <center>
 <h1>COVID-19 Timeline in Thailand</h1>
-Source: <a href="https://covid19.th-stat.com/th/network">กรมควบคุมโรค</a>,
+Source: <a href="https://covid19.th-stat.com/th/network" target="_blank">กรมควบคุมโรค</a> +
+<a href="cases.html" target="_blank">my unit tests</a>,
 <style="color:#CCCCCC; font-family: monospace,monospace; font-size: 1em; ">Coding by
-<a href="https://visjs.org/">@windygallery (2020)</a> v.1.1.0</style>
+<a href="https://visjs.org/">@windygallery (2020)</a> v.1.3.0</style>
 <br><br>
 <div id="visualization"></div>
 
@@ -62,11 +63,12 @@ function setData(dataset, names) {
     groupOrder: 'content',  // groupOrder can be a property name or a sorting function
     width: '95%',
     height: '400px',
-    margin: { item: 10 },
+    margin: { item: 20 },
     // timeAxis: {scale: 'day', step: 1},
     zoomMin: 864000000,
     zoomMax: 8640000000,
-
+    stack: false,
+    stackSubgroups: true,
     // min: new Date(2020, 2, 1),                // lower limit of visible range
     // max: new Date(2020, 3, 10),                // upper limit of visible range
     // zoomMin: 10000 * 60 * 60 * 24,             // one day in milliseconds
